Fix Title Spacing

--- a/src/editor.css
+++ b/src/editor.css
@@ -148,6 +148,7 @@ form >*{
     font-weight: bold;
     font-size: 1.5em;
     padding-left: 5px;
+    padding-bottom: 3px;
     margin: 0px;
 }
 .buttonDiv{
